# logos-experiments

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.yml
edge-embeddings-worth-it/: .gitignore  README.md  goal.yaml  pyproject.toml  run_real_grid_search.sh
edge-embeddings-worth-it/corpus/: build_block_corpus.py  build_wiki_corpus.py  corpus.jsonl  corpus_blocks.jsonl  corpus_bridge.jsonl  corpus_dense.jsonl  corpus_wiki.jsonl
edge-embeddings-worth-it/eval/: metrics.py
edge-embeddings-worth-it/harness/: run_experiment.py
edge-embeddings-worth-it/journal/: 001-real-grid-search.md
edge-embeddings-worth-it/sweep/: REPORT.md  analyze.py  build_substrate.py  capture.py  reducers.py  rejoin_from_corpus.py  results.json  run_reducers.py  salience_filter.py  selftest_results.json  sweep.py
edge-embeddings-worth-it/workspace/: round_1.json  round_2.json  round_3.json
edge-emergence/: pilot.py  pyproject.toml  stages.py
edge-emergence/tests/: test_stages.py
edge-emergence/workspace/: run_20260611_192846.json  run_20260611_203051.json  run_20260611_204555.json  run_20260611_212609.json  run_20260611_214903.json  run_20260611_215854.json
embedding-eval/: README.md  embedders.py  metrics.py  pyproject.toml  results.json  run.py  sample.json  sample.py  truncate.py  truncation.json
embedding-eval/tests/: test_metrics.py
embedding-representation/: README.md  RECORD.md  audit.json  audit.py  battery.py  control.json  control.py  decouple.py  gloss.py  pyproject.toml  represent.py  rescore.json  rescore.py  results.json  results_decouple.json  run.py  sample.py  signatures.py
embedding-representation/docs/superpowers/plans/: 2026-06-16-facet-embedding-arms.md
embedding-representation/docs/superpowers/specs/: 2026-06-16-facet-embedding-arms-design.md
embedding-representation/tests/: test_gloss.py  test_signatures.py
growth-prediction/: predict.py  prediction_report.json  pyproject.toml  report.py  score.py  trend.jsonl
growth-prediction/tests/: test_predict.py  test_score.py
mdl-ledger/: delta.py  ledger.py  live.py  pyproject.toml
mdl-ledger/tests/: test_ledger.py
naming-driven-typing/: .gitignore  README.md  goal.yaml  pyproject.toml
naming-driven-typing/corpus/: corpus.jsonl  corpus_batch3.jsonl  diverse_matched_50.jsonl  single_domain_cellbio_50.jsonl
naming-driven-typing/eval/: metrics.py
naming-driven-typing/eval/fixtures/: ablation_arms.json  run_synthetic.json
naming-driven-typing/fixtures/: catalog.json  clusters.json  llm_responses.json  llm_responses_naive_llm.json  llm_responses_no_chain.json  llm_responses_no_graft.json
naming-driven-typing/fixtures/graded/: catalog.json  clusters.json  llm_responses.json.partial.json
naming-driven-typing/harness/: a0_baseline.py  ablations.py  cascade.py  catalog.py  fixtures_io.py  freeze.py  probe.py  reseed.py  run_experiment.py
naming-driven-typing/tests/: conftest.py  test_a0_baseline.py  test_ablations.py  test_cascade.py  test_catalog.py  test_corpus_batch3.py  test_fixtures_frozen.py  test_fixtures_io.py  test_freeze.py  test_metrics.py  test_probe.py  test_reseed_ingest.py  test_run_experiment.py
naming-driven-typing/workspace/: run_20260605T213249Z.json  run_20260605T213320Z.json  run_20260605T225615Z.json  run_20260605T225854Z.json
ner-extraction-bakeoff/: DESIGN.md  PLAN.md  README.md  arms.py  gold.jsonl  metrics.py  results.json  results_20260610_allarms_backup.json  results_20260611_3arm_repro.json  results_20260611_ablation_matrix.json  results_20260611_livetypes_arms.json  results_20260611_merged_main_anchor.json  results_20260611_provenance_paired_merges.json  results_20260611_spacy_reference.json  run-local.sh  run_bakeoff.py
ner-extraction-bakeoff/tests/: test_arms_extract_json.py  test_metrics.py
relation-vocab/: .gitignore  README.md  apply_mapping.py  curated_vocab.json  embed_evidence.py  enrich_mapping.py  mapping.csv  propose.py  propose_mapping.py  pyproject.toml  reembed_folded_edges.py  snapshot.json  tighten_merges.txt  tightened_vocab.json
relation-vocab/tests/: test_apply_mapping.py  test_propose.py
structural-edge-prediction/: README.md  goal.yaml  pyproject.toml
structural-edge-prediction/corpus/: corpus_700.jsonl  corpus_deepwells.jsonl
structural-edge-prediction/eval/: metrics.py
structural-edge-prediction/fixtures/: graph_350.json  toy_graph.json
structural-edge-prediction/harness/: freeze_snapshot.py  run_experiment.py  scorers.py  signature.py  snapshot_io.py
structural-edge-prediction/tests/: conftest.py  test_metrics.py  test_run_experiment.py  test_scorers.py  test_signature.py  test_snapshot_io.py
structural-health/: BASELINE.md  probe.py  pyproject.toml
structural-health/tests/: test_probe.py
