[project]
name = "embedding-eval"
version = "0.1.0"
description = "lx39: multi-model embedding bake-off for the HCG -- type-classification + vector geometry vs dim/cost (logos-experiments#39)"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.20.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
