[project]
name = "embedding-representation"
version = "0.1.0"
description = "Which input representation (name / context / name+context) makes HCG entities cluster coherently -- label-free intrinsic battery, one model (logos-experiments)"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.20.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pymilvus>=2.4.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
