[project]
name = "naming-driven-typing-experiment"
version = "0.1.0"
description = "Offline naming-driven typing experiment harness"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
