[project]
name = "relation-vocab"
version = "0.1.0"
description = "W0.3b one-off predicate consolidation: reviewable mapping proposals for df=1 relations (logos-experiments#34, epic logos#557)"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
